--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "An awesome delivery application",
   "main": "index.js",
   "scripts": {
+    "postinstall": "tsc",
     "start": "nodemon index.ts",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
   },
   "repository": {
     "type": "git",
