--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "start": "node index.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "engines": {
+    "node": "15.x"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/FahreddinGolcuk/RunningCourierApi.git"
