--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "type": "module",
   "scripts": {
     "postinstall": "npm run build",
+    "build": "tsc",
     "start": "node index.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
