--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
   "type": "module",
   "scripts": {
     "postinstall": "npm run build",
-    "build": "tsc",
-    "start": "node index.ts",
+    "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "engines": {
@@ -34,8 +33,6 @@
     "ts-node": "^10.1.0"
   },
   "devDependencies": {
-    "@types/express": "^4.16.1",
-    "tslint": "^5.12.1",
-    "typescript": "^3.3.3"
+    "@types/express": "^4.16.1"
   }
 }
